Fix issue with gallery list alignment

--- a/app/javascript/stylesheets/redesign/_gallery.scss
+++ b/app/javascript/stylesheets/redesign/_gallery.scss
@@ -1,9 +1,11 @@
 .gallery {
+  text-align: center;
+
   &__list,
   &__list--no-albums {
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
     display: inline-flex;
     justify-content: center;
     gap: var(--size-2);
